--- a/docs/static/css/main.css
+++ b/docs/static/css/main.css
@@ -94,22 +94,22 @@ Components
 .bar {
   height: 0.2rem;
   width: 4rem;
-  background: #f4f4f4;
+  background: #ccd6f6;
   margin: 0.75rem auto 0;
 }
 
 .btn-primary {
   padding: 1rem;
-  border: 1px solid #f4f4f4;
+  border: 1px solid #ccd6f6;
   background: none;
-  color: #f4f4f4;
+  color: #ccd6f6;
   cursor: pointer;
   transition: all 0.2s ease;
   border-radius: 10px;
 }
 .btn-primary:hover {
-  background: #f4f4f4;
-  color: #222;
+  background: #ccd6f6;
+  color: #0a192f;
 }
 
 footer {
@@ -133,13 +133,13 @@ footer {
 @media (min-width: 64rem) {
   .footer .scroll-to-top #scrollToTopBtn {
     display: block;
-    background: #f4f4f4;
+    background: #ccd6f6;
     position: fixed;
     right: 1rem;
     bottom: 1rem;
     width: 3rem;
     height: 3rem;
-    border: 1px solid #222;
+    border: 1px solid #0a192f;
     border-radius: 10px;
     cursor: pointer;
   }
@@ -163,7 +163,7 @@ footer {
 }
 .header .menu .main-nav__list-item a {
   padding: 0.5rem;
-  color: #f4f4f4;
+  color: #ccd6f6;
   text-decoration: none;
   font-weight: 400;
   background: linear-gradient(currentColor 0 0) 0 100%/var(--d, 0) 2px no-repeat;
@@ -173,7 +173,7 @@ footer {
   --d: 100%;
 }
 .header .menu .main-nav__list-item--active a {
-  background: linear-gradient(#ba09ff 0 0) 0 100%/var(--d, 100%) 2px no-repeat;
+  background: linear-gradient(#64ffda 0 0) 0 100%/var(--d, 100%) 2px no-repeat;
 }
 @media (min-width: 48rem) {
   .header .menu {
@@ -206,15 +206,15 @@ footer {
   font-weight: 500;
 }
 .reflections__list-item .answer a {
-  color: #f4f4f4;
+  color: #ccd6f6;
 }
 .reflections__list-item h3 {
   margin: 1rem 0;
 }
 
 .services {
-  background: #f4f4f4;
-  color: #222;
+  background: #ccd6f6;
+  color: #0a192f;
   padding: 4rem 0;
   text-align: center;
 }
@@ -252,12 +252,12 @@ footer {
 }
 .socials__list > li a i {
   font-size: 2rem;
-  color: #f4f4f4;
+  color: #ccd6f6;
   transition: 0.2s ease;
   transform: translateY(0);
 }
 .socials__list > li a i:hover {
-  color: #ba09ff;
+  color: #64ffda;
   transform: translateY(-10%);
 }
 .socials__list > li:last-child {
@@ -275,7 +275,7 @@ footer {
   justify-content: space-between;
 }
 .technologies__list-item {
-  margin-top: 2rem;
+  margin-top: 3rem;
   flex-basis: 30%;
 }
 .technologies__list-item img {
@@ -306,7 +306,7 @@ Layout
   margin-top: 3rem;
 }
 .mailchimp img {
-  border: 1px solid #222;
+  border: 1px solid #0a192f;
   width: 100%;
 }
 .mailchimp p {
@@ -349,8 +349,8 @@ Layout
 .mailchimp .survey {
   padding-top: 3rem;
   margin-top: 0;
-  background: #f4f4f4;
-  color: #222;
+  background: #ccd6f6;
+  color: #0a192f;
 }
 .mailchimp .survey {
   padding-bottom: 3rem;
@@ -382,10 +382,10 @@ Pages
   margin-top: 0.5rem;
   width: 100%;
   padding: 1rem;
-  border: 1px solid #f4f4f4;
+  border: 1px solid #ccd6f6;
   border-radius: 5px;
   background: none;
-  color: #f4f4f4;
+  color: #ccd6f6;
   outline: none;
 }
 .contact form textarea {
@@ -410,7 +410,7 @@ Pages
 }
 .contact__alt a {
   margin-left: 0.25rem;
-  color: #f4f4f4;
+  color: #ccd6f6;
 }
 
 .project img {
@@ -452,7 +452,7 @@ Pages
 }
 .projects__list-item a {
   display: block;
-  color: #f4f4f4;
+  color: #ccd6f6;
   text-align: center;
 }
 .projects__list-item a .btn-primary {
@@ -503,8 +503,8 @@ Themes
 }
 
 body {
-  background: #222;
-  color: #f4f4f4;
+  background: #0a192f;
+  color: #ccd6f6;
 }
 
 .h-layout {
