--- a/site/_includes/components/socials.njk
+++ b/site/_includes/components/socials.njk
@@ -1,12 +1,6 @@
 <div class="socials">
     <ul class="socials__list">
         <li>
-            <a href="https://www.twitter.com/thatnicolas/" target="_blank" rel="noreferrer">
-                <i class="fab fa-twitter-square"></i>
-            </a>
-        </li>
-
-        <li>
             <a href="https://www.linkedin.com/in/nicolascnudde/" target="_blank" rel="noreferrer">
                 <i class="fab fa-linkedin"></i>
             </a>
@@ -15,6 +9,12 @@
         <li>
             <a href="https://www.github.com/pgm-nicolascnudde/" target="_blank" rel="noreferrer">
                 <i class="fab fa-github-square"></i>
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.twitter.com/nicolas_cnudde/" target="_blank" rel="noreferrer">
+                <i class="fab fa-twitter-square"></i>
             </a>
         </li>
     </ul>
