--- a/site/_sass/abstracts/_variables.scss
+++ b/site/_sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 /*
 Fonts
 */
-$primary: #222;
-$secondary: #f4f4f4;
-$accent: #ba09ff;
+$primary: #0a192f;
+$secondary: #ccd6f6;
+$accent: #64ffda;
 
 $font-base: 1rem;
 $font-sm: 1.25rem;
