--- a/site/contact/index.njk
+++ b/site/contact/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Contact
+title: Get In Touch
 eleventyNavigation:
   key: contact
   order: 3
@@ -23,7 +23,7 @@ eleventyNavigation:
       <p>Please fill in the form below and I'll get back to you as soon as possible!</p>
     </div>
 
-    <form action="/">
+    <form action="https://getform.io/f/bdd57160-2d6e-4e60-bfcf-8f5d3493bc88" method="POST">
       <div class="form__name">
         <label for="name">Name</label>
         <input type="text" name="name" id="name" required>
