--- a/site/index.njk
+++ b/site/index.njk
@@ -91,9 +91,25 @@ eleventyNavigation:
 
             <li class="technologies__list-item">
                 <figure>
+                    <img src="../static/images/sass.svg" alt="SASS" />
+
+                    <figcaption>SASS</figcaption>
+                </figure>
+            </li>
+
+            <li class="technologies__list-item">
+                <figure>
                     <img src="../static/images/javascript.svg" alt="JavaScript" />
 
                     <figcaption>JavaScript</figcaption>
+                </figure>
+            </li>
+
+            <li class="technologies__list-item">
+                <figure>
+                    <img src="../static/images/typescript.svg" alt="TypeScript" />
+
+                    <figcaption>TypeScript</figcaption>
                 </figure>
             </li>
 
@@ -115,11 +131,42 @@ eleventyNavigation:
 
             <li class="technologies__list-item">
                 <figure>
-                    <img src="../static/images/adobe.svg" alt="Adobe XD" />
+                    <img src="../static/images/adobe.svg" alt="Adobe XD & PS" />
 
                     <figcaption>Adobe XD & PS</figcaption>
                 </figure>
-            </li>          
+
+            <li class="technologies__list-item">
+                <figure>
+                    <img src="../static/images/git.svg" alt="Git" />
+
+                    <figcaption>Git</figcaption>
+                </figure>
+            </li>
+
+            <li class="technologies__list-item">
+                <figure>
+                    <img src="../static/images/github.svg" alt="GitHub" />
+
+                    <figcaption>GitHub</figcaption>
+                </figure>
+            </li>
+
+            <li class="technologies__list-item">
+                <figure>
+                    <img src="../static/images/npm.svg" alt="NPM" />
+
+                    <figcaption>NPM</figcaption>
+                </figure>
+            </li>
+
+            <li class="technologies__list-item">
+                <figure>
+                    <img src="../static/images/raspberry_pi.svg" alt="Raspberry Pi" />
+
+                    <figcaption>Raspberry Pi</figcaption>
+                </figure>
+            </li>
         </ul>
     </div>
 </section>
