--- a/site/_sass/components/_header.scss
+++ b/site/_sass/components/_header.scss
@@ -34,7 +34,7 @@
 
                     &--active {
                         a {
-                            background: linear-gradient(#ba09ff 0 0) 0 100% /var(--d, 100%) 2px no-repeat;
+                            background: linear-gradient(#64ffda 0 0) 0 100% /var(--d, 100%) 2px no-repeat;
                         }
                     }
                 }
