--- a/site/work/index.njk
+++ b/site/work/index.njk
@@ -23,7 +23,7 @@ eleventyNavigation:
             <li class="card projects__list-item">
                 <div class="card__left">
                   <a href="{{ work.url }}">
-                    <img src="/static/images/{{ work.data.image }}" alt="{{ work.data.client }}">
+                    <img src="/static/images/work/{{ work.data.image }}" alt="{{ work.data.client }}">
                   </a>
                 </div>
 
