Added more structure to the folders

--- a/site/index.njk
+++ b/site/index.njk
@@ -10,8 +10,7 @@ eleventyNavigation:
     <div class="title__container h-layout">
         <h1>{{ title }}</h1>
 
-        <div class="bar">
-        </div>
+        <div class="bar"></div>
     </div>
 </section>
 
@@ -31,7 +30,6 @@ eleventyNavigation:
                     <span>Send me a message</span>
                 </button>
             </a>
-            
         </div>
     </div>
 </section>
@@ -44,7 +42,6 @@ eleventyNavigation:
             {% for service in services %}
                 {% include "components/services.njk" %}
             {% endfor %}
-
         </ul>
     </div>
 </section>
