Fixed the  image path on the work detail pages

--- a/site/_includes/layouts/project.njk
+++ b/site/_includes/layouts/project.njk
@@ -13,7 +13,7 @@ layout: layouts/base.njk
 
     <section class="project__content">
         <div class="h-layout">
-            <img src="/static/images/{{ image }}" alt={{ client }} />
+            <img src="/static/images/work/{{ image }}" alt={{ client }} />
         
             <h2>Overview</h2>
 
