--- a/site/_includes/layouts/base.njk
+++ b/site/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
         <meta name="robots" content="noindex, nofollow" />
         <title>Nicolas Cnudde</title>
         <link rel="stylesheet" href="{{ '/static/css/main.css' | url }}">
+        <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <script src="https://kit.fontawesome.com/c8d1dd9982.js" crossorigin="anonymous"></script>
     </head>
 
